api memberGet build
